--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,16 @@
         tools:text="20"
         android:background="@drawable/shape_red_white"
         android:textColor="@android:color/holo_red_dark"
-        android:width="60dp"
+        android:width="@dimen/score_width"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="@dimen/score_text_size"
         android:id="@+id/txtMainPontos"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginRight="@dimen/score_margin"
+        android:layout_marginEnd="@dimen/score_margin"
+        android:layout_marginTop="@dimen/score_margin_top"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,7 +37,7 @@
         android:shadowDy="5"
         android:shadowRadius="5"
         android:textColor="@color/yellow"
-        android:textSize="16sp"
+        android:textSize="@dimen/score_text_size"
         android:id="@+id/lblMainPontos"
         android:maxLines="1"
         android:layout_marginTop="24dp"
@@ -46,14 +47,14 @@
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="460dp"
+        android:layout_height="@dimen/content_height"
         android:layout_below="@id/lblMainPontos"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="@dimen/margin_conteudo"
         android:layout_marginRight="@dimen/margin_conteudo"
         android:layout_marginTop="@dimen/margin_top_conteudo"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/content_margin_bottom"
         android:background="@drawable/shape_content"
         android:id="@+id/relativeLayout">
 
@@ -74,7 +75,7 @@
             android:layout_height="@dimen/resposta1height"
             android:text="@string/play"
             android:background="@drawable/shape_pergunta"
-            android:textSize="16sp"
+            android:textSize="@dimen/main_button_text_size"
             android:id="@+id/btnMainJogar"
             android:layout_below="@id/txtMain"
             android:layout_centerHorizontal="true"
@@ -85,7 +86,7 @@
             android:layout_height="@dimen/resposta1height"
             android:text="@string/txt_avatar"
             android:background="@drawable/shape_pergunta"
-            android:textSize="16sp"
+            android:textSize="@dimen/main_button_text_size"
             android:id="@+id/btnMainAvatar"
             android:layout_below="@id/btnMainJogar"
             android:layout_centerHorizontal="true"
@@ -95,7 +96,7 @@
             android:layout_width="@dimen/resposta1width"
             android:layout_height="@dimen/resposta1height"
             android:text="@string/guarda_roupa"
-            android:textSize="16sp"
+            android:textSize="@dimen/main_button_text_size"
             android:background="@drawable/shape_pergunta"
             android:id="@+id/btnMainGuardaRoupa"
             android:layout_below="@id/btnMainAvatar"
@@ -107,7 +108,7 @@
             android:layout_height="@dimen/resposta1height"
             android:text="@string/ranking"
             android:background="@drawable/shape_pergunta"
-            android:textSize="16sp"
+            android:textSize="@dimen/main_button_text_size"
             android:id="@+id/btnMainRanking"
             android:layout_below="@id/btnMainGuardaRoupa"
             android:layout_centerHorizontal="true"
@@ -118,7 +119,7 @@
             android:layout_height="@dimen/resposta1height"
             android:text="@string/comprar"
             android:background="@drawable/shape_pergunta"
-            android:textSize="16sp"
+            android:textSize="@dimen/main_button_text_size"
             android:id="@+id/btnMainComprarRoupa"
             android:layout_below="@id/btnMainRanking"
             android:layout_centerHorizontal="true"
@@ -129,7 +130,7 @@
             android:layout_height="@dimen/resposta1height"
             android:text="@string/exit"
             android:background="@drawable/shape_pergunta"
-            android:textSize="16sp"
+            android:textSize="@dimen/main_button_text_size"
             android:id="@+id/btnExit"
             android:layout_below="@id/btnMainComprarRoupa"
             android:layout_centerHorizontal="true"
