--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edtEsqueciSenha"
-        android:hint="Email"
+        android:hint="@string/user_hint"
         android:inputType="textEmailAddress"/>
 
     <LinearLayout
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnEsqueciSenhaCancelar"
-            android:text="Cancelar"
+            android:text="@string/btn_cancelar"
             android:shadowColor="#000"
             android:shadowDx="5"
             android:shadowDy="5"
@@ -34,13 +34,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnEsqueciSenhaEnviar"
-            android:text="Enviar"
+            android:text="@string/btn_confirm"
             android:shadowColor="#000"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="5"
             android:textColor="@color/yellow"
             android:background="@drawable/shape_timer"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"/>
     </LinearLayout>
 </LinearLayout>
