--- a/app/src/main/res/layout/activity_dinheiro_insuficiente.xml
+++ b/app/src/main/res/layout/activity_dinheiro_insuficiente.xml
@@ -16,11 +16,12 @@
         android:layout_height="wrap_content"
         android:text="@string/txt_meu_avatar"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/layout_title_text_size"
         android:textAlignment="center"
         android:background="@drawable/shape_timer"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/margin_conteudo"
         android:layout_marginLeft="@dimen/margin_conteudo"
+        android:layout_marginStart="@dimen/margin_conteudo"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -31,15 +32,16 @@
         android:layout_height="wrap_content"
         android:background="@drawable/shape_red_white"
         android:textColor="@android:color/holo_red_dark"
-        android:width="60dp"
+        android:width="@dimen/score_width"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="@dimen/score_text_size"
         android:id="@+id/txtPontosDinheiro"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginRight="@dimen/score_margin"
+        android:layout_marginEnd="@dimen/score_margin"
+        android:layout_marginTop="@dimen/score_margin_top" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,7 +52,7 @@
         android:shadowDy="5"
         android:shadowRadius="5"
         android:textColor="@color/yellow"
-        android:textSize="16sp"
+        android:textSize="@dimen/score_text_size"
         android:id="@+id/lblPontosDinheiro"
         android:maxLines="1"
         android:layout_marginTop="24dp"
@@ -60,14 +62,14 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="460dp"
+        android:layout_height="@dimen/content_height"
         android:layout_below="@+id/lblPontosDinheiro"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="@dimen/margin_conteudo"
         android:layout_marginRight="@dimen/margin_conteudo"
         android:layout_marginTop="@dimen/margin_top_conteudo"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/content_margin_bottom"
         android:background="@drawable/shape_content">
 
         <TextView
@@ -82,6 +84,7 @@
             android:layout_marginTop="20dp" />
 
         <ImageView
+            android:contentDescription="@string/cd_img_coin"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:id="@+id/imgRoupaOpcao1"
