--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -36,6 +36,7 @@
             android:background="@drawable/shape_timer"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="@dimen/margin_conteudo"
+            android:layout_marginStart="@dimen/margin_conteudo"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -44,14 +45,14 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="460dp"
+            android:layout_height="@dimen/content_height"
             android:layout_below="@+id/lblRanking"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="@dimen/margin_conteudo"
             android:layout_marginRight="@dimen/margin_conteudo"
             android:layout_marginTop="@dimen/margin_top_conteudo"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="@dimen/content_margin_bottom"
             android:background="@drawable/shape_content"
             android:padding="5dp">
 
@@ -93,7 +94,8 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="15dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"/>
 
     </RelativeLayout>
 </RelativeLayout>
