--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,19 @@
 
     <dimen name="roupa_size">200dp</dimen>
 
+    <dimen name="content_height">460dp</dimen>
+    <dimen name="content_margin_bottom">50dp</dimen>
+
+    <dimen name="score_width">60dp</dimen>
+    <dimen name="score_text_size">16sp</dimen>
+    <dimen name="score_margin">10sp</dimen>
+    <dimen name="score_margin_top">8dp</dimen>
+
+    <dimen name="layout_title_text_size">20sp</dimen>
+
+    <dimen name="ex1_opt_text_size">16sp</dimen>
+    <dimen name="main_button_text_size">16sp</dimen>
+
     <!--
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
